--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1811,6 +1811,10 @@ div.section_tabs a:hover, .section_tabs .current a {
 	padding: 5px;
 }
 
+div.fb_dialog { text-align:center;}
+div.fb_dialog > p {font-size:1.2em;margin-bottom:1em;}
+div.fb_2buttons {overflow:auto;width:130px;margin:0 auto;}
+
 .input_text {height:18px;background-color:#ddd;border:1px solid #ccc;padding:3px 10px;width:60px;border-radius:4px;}
 select.input_text {height:26px;width:174px;}
 .input_text:focus {background-color:#ffa500;}
