ecz status check

--- a/zambia/templates/zambia/templates.html
+++ b/zambia/templates/zambia/templates.html
@@ -289,7 +289,7 @@
 			
 			<span class="span">What is the ECZ&#146;s six digit ID number of the Polling Station of your Polling Stream</span>
 			
-			<span class="input"><input type="text" name="response.attributes.J" class="input_smoke field"></span>
+			<span class="input"><input type="text" name="response.attributes.J" class="input_smoke field"><img src="/assets/images/tick.png" id="ecz_status" style="vertical-align:middle;margin-left:0.4em;display:none" alt="Correct" /></span>
 		</p>
 	</div>
 	
