also implemented the highlighting of the row when the ecz code doesn't match

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,6 +42,9 @@ table.datagrid th {
     background-color: #eee;
 }
 
+tr.ecz_code_incorrect {background-color:#FCE6C9;}
+tr.ecz_code_incorrect:nth-child(2n+1) {background-color: #FCE6C9;}
+
 .datagrid tr:hover {
     background-color: #fff;
 }
