repeated the display of the sectional tabs at the bottom of the section just before the save button

--- a/zambia/templates/zambia/templates.html
+++ b/zambia/templates/zambia/templates.html
@@ -88,10 +88,10 @@
 <script type="text/x-handlebars-template" id="checklist-section-tabs-template" charset="utf-8">
 	<div class="section_tabs">
 		<ul>
-			<li class="current"><a href="javascript:;" id="tab1">Setup</a></li>
-			<li><a href="javascript:;" id="tab2">Voting</a></li>
-			<li><a href="javascript:;" id="tab3">Closing</a></li>
-			<li><a href="javascript:;" id="tab4">Counting</a></li>
+			<li class="current" title="tab1"><a href="javascript:;" id="tab1">Setup</a></li>
+			<li title="tab2"><a href="javascript:;" id="tab2">Voting</a></li>
+			<li title="tab3"><a href="javascript:;" id="tab3">Closing</a></li>
+			<li title="tab4"><a href="javascript:;" id="tab4">Counting</a></li>
 		</ul>
 	</div>
 	<div id="clear"></div>
@@ -99,11 +99,11 @@
 <script type="text/x-handlebars-template" id="general-checklist-section-tabs-template" charset="utf-8">
 	<div class="section_tabs">
 		<ul>
-			<li class="current"><a href="javascript:;" id="tab1">Identification</a></li>
-			<li><a href="javascript:;" id="tab2">Setup</a></li>
-			<li><a href="javascript:;" id="tab3">Voting</a></li>
-			<li><a href="javascript:;" id="tab4">Closing</a></li>
-			<li><a href="javascript:;" id="tab5">Counting</a></li>
+			<li class="current" title="tab1"><a href="javascript:;" id="tab1">Identification</a></li>
+			<li title="tab2"><a href="javascript:;" id="tab2">Setup</a></li>
+			<li title="tab3"><a href="javascript:;" id="tab3">Voting</a></li>
+			<li title="tab4"><a href="javascript:;" id="tab4">Closing</a></li>
+			<li title="tab5"><a href="javascript:;" id="tab5">Counting</a></li>
 		</ul>
 	</div>
 	<div id="clear"></div>
@@ -686,7 +686,7 @@
 	<p class="style form_buttons">
 		<span class="code">&nbsp;</span>
 		<span class="span">&nbsp;</span>
-		<span class="input"><span class="btn_yellow btn_space"><input type="submit" value ="save" class="search_btn"/><span></span></span></span>
+		<span class="input"><span class="btn_yellow btn_space"><input type="submit" value ="save all" class="search_btn"/><span></span></span></span>
 	</p>
 	</form>
 </script>
@@ -1377,7 +1377,7 @@
 	<p class="style form_buttons">
 		<span class="code">&nbsp;</span>
 		<span class="span">&nbsp;</span>
-		<span class="input"><span class="btn_yellow btn_space"><input type="submit" value ="save" class="search_btn"/><span></span></span></span>
+		<span class="input"><span class="btn_yellow btn_space"><input type="submit" value ="save all" class="search_btn"/><span></span></span></span>
 	</p>
 	</form>
 </script>
