--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1780,7 +1780,7 @@ p.style .head { font-weight:bold;float:left;font-size:1.5em;width:180px;}
 p.style .input label { font-size:1em;display:inline-block;margin-right:1em;text-align:center;vertical-align:top; }
 p.form_buttons { background-color: #fff;}
 
-.pane { margin-top: 3em; display: none;}
+.pane { margin-top: 3em; margin-bottom: 3em; display: none;}
 .code { display: block;float:left;font-size:1em;width:30px;}
 .span { display: block;float:left;width:300px;margin-right: 30px;color: #aaa;}
 .input { display:block;float:left;width:560px;}
