feature: add incident

--- a/zambia/templates/zambia/templates.html
+++ b/zambia/templates/zambia/templates.html
@@ -1497,7 +1497,8 @@
 		<p class="style"><span class="span"><label>District</label></span><span class="input"><select name="district" title="district" class="input_smoke location_select"></select></span></p>
 		<p class="style"><span class="span"><label>Constituency</label></span><span class="input"><select name="constituency" title="constituency" class="input_smoke location_select"></select></span></p>
 		<p class="style"><span class="span"><label>Ward</label></span><span class="input"><select name="ward" title="ward" class="input_smoke location_select"></select></span></p>
-		<p class="style"><span class="span"><label>Polling District</label></span><span class="input"><select name="location" title="polling_district" class="input_smoke location_select field"></select></span></p>
+		<p class="style"><span class="span"><label>Polling District</label></span><span class="input"><select name="polling_district" title="polling_district" class="input_smoke location_select"></select></span></p>
+		<p class="style"><span class="span"><label>Polling Station/Stream</label></span><span class="input"><select name="location" title="polling_stream" class="input_smoke location_select field" style="width:20em"></select></span></p>
 		<p class="clear"></p>
 	</div>
 </script>
