fixed bug with contacts management interface

--- a/zambia/templates/zambia/templates.html
+++ b/zambia/templates/zambia/templates.html
@@ -1446,6 +1446,7 @@
 	</select></label>
 	
 	<label for="partner"><span class="label">Partner</span> <select name="partner" id="partner" class="input_smoke field">
+		<option>Not Specified</option>
 		<option value="AVAP">AVAP</option>
 		<option value="Caritas">Caritas</option>
 		<option value="FODEP">FODEP</option>
