add contacts and send sms

--- a/webapp/templates/webapp/templates.html
+++ b/webapp/templates/webapp/templates.html
@@ -53,7 +53,7 @@
 <script type="text/x-handlebars-template" id="sms-blaster-template" charset="utf-8">
 	<div id="sms">
 		<table>
-			<tr><th valign="top">Message</th><td><textarea name="message" class="message" rows="5" cols="40"></textarea></td></tr>
+			<tr><th valign="top">Message</th><td><textarea id="message" name="message" class="message" rows="5" cols="40"></textarea></td></tr>
 			<tr><th>&nbsp;</th><td><span class="btn_yellow" id="send_btn_wrapper"><input type="button" name="send_btn" id="send_btn" value="Send"><span>&nbsp;</span></span> <img src="/assets/images/fb_loader.gif" id="send_indicator" height="11" width="16" style="margin-left:8px;margin-top:7px;display:none" /> <span id="send_status" style="background-color:#FDFFB5;font-weight:bold;padding:3px;margin-top:3px;margin-left:8px;display:none;"></span></td></tr>
 		</table>
 	</div>
